--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,13 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
+.env.development
 .env.development.local
 .env.test.local
+.env.production
 .env.production.local
 .env.local
+*.env.*
 
 # temp directory
 .temp
