refactor authentication module: introduce authentication guard and enum, update constants and imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
       "@features/*": ["src/features/*"],
       "@configs/*": ["src/configs/*"],
       "@constants/*": ["src/core/constants/*"],
+      "@enums/*": ["src/core/enums/*"],
+      "@decorators/*": ["src/core/decorators/*"],
       "@database/*": ["src/core/database/*"]
     }
   }
