--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,14 +18,15 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@app/*": ["src/app/*"],
-      "@core/*": ["src/core/*"],
-      "@features/*": ["src/features/*"],
-      "@configs/*": ["src/configs/*"],
       "@constants/*": ["src/core/constants/*"],
       "@enums/*": ["src/core/enums/*"],
+      "@interfaces/*": ["src/core/interfaces/*"],
       "@decorators/*": ["src/core/decorators/*"],
-      "@database/*": ["src/core/database/*"]
+      "@database/*": ["src/core/database/*"],
+      "@features/*": ["src/features/*"],
+      "@configs/*": ["src/configs/*"],
+      "@core/*": ["src/core/*"],
+      "@app/*": ["src/app/*"]
     }
   }
 }
